# contracts

./: .dockerignore  .gitignore  Cargo.toml  README.md  build_and_deploy.sh  dev_nft_build_and_deploy.sh  dev_nft_deploy.sh  juice_schema.json  market_build_and_deploy.sh  market_schema.json  nft_build_and_deploy.sh  nft_schema.json
.cargo/: config
.github/workflows/: rust.yml
contract-builder/: Dockerfile  build.sh  run.sh
contract_deployer/: Cargo.toml
contract_deployer/src/: main.rs
docker/: localnet.Dockerfile  testnet.Dockerfile
juice/: Cargo.toml
juice/src/: lib.rs
manager_derive_macro/: Cargo.toml
manager_derive_macro/src/: lib.rs
manager_derive_macro/tests/: general.rs
nft_market/: Cargo.toml  README.md
nft_market/src/: ask.rs  bid.rs  consts.rs  error.rs  external.rs  helpers.rs  lib.rs  trade.rs
nft_market/src/callback/: mod.rs  on_nft_approve.rs  on_trade.rs
nft_market/src/xcc/: mod.rs  nft_on_approve.rs  on_nft_approve.rs  on_trade.rs
nft_market/tests/: asks.rs  biding.rs  buying.rs  cancel_ask.rs  cancel_bid.rs  cross_contract_simulations.rs  first_test.rs  generate_id.rs  helpers.rs  indexer_purposes.rs  one_bid_one_ask.rs  other.rs  storage_deposits.rs  utils.rs  xcc.rs
nft_models/: Cargo.toml
nft_models/src/: lemon.rs  lib.rs  manager.rs  parent.rs  slots.rs  suppressor.rs  weapon.rs
nft_token/: Cargo.toml  README.md
nft_token/src/: consts.rs  error.rs  helpers.rs  internal.rs  lib.rs  mint.rs  token_metadata_ext.rs  xcc_handlers.rs
nft_token/tests/: assemble_nft.rs  craft.rs  nft_mint_full.rs  public_methods.rs  rand.rs
parent_derive_macro/: Cargo.toml
parent_derive_macro/src/: lib.rs
parent_derive_macro/tests/: general.rs
play2earn/: Cargo.toml  README.md
play2earn/src/: lib.rs
scripts/: dev_play2earn_deploy.sh  local_deploy.sh  testnet_deploy.sh
slots_derive_macro/: Cargo.toml
slots_derive_macro/src/: lib.rs
slots_derive_macro/tests/: basic.rs
spoiled_nft_token/: Cargo.toml
spoiled_nft_token/src/: lib.rs
test_helpers/: Cargo.toml
test_helpers/src/: consts.rs  contract_initializer.rs  errors.rs  lib.rs  state.rs  state_builder.rs  statics.rs
test_helpers/tests/: helpers.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: Cargo.toml
tests/tests/: helpers.rs  test_nft_contract_methods.rs  test_nft_token_nft_market.rs  utils.rs
token_metadata_ext/: Cargo.toml
token_metadata_ext/src/: lib.rs
