[workspace]

members = ["nft_token", "test_utils", "token_metadata_ext", "nft_market", "play2earn", "juice", "spoiled_nft_token", "slots_derive_macro"]
default-members = ["nft_token", "nft_market", "play2earn", "juice", "spoiled_nft_token"]

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true