[package]
name = "contract_deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["macros"] }
once_cell = "1.8.0"
anyhow = "1.0.57"
nft_token = { path = "../nft_token" }
spoiled_nft_token = { path = "../spoiled_nft_token" }
lemotests = { git = "https://github.com/battlemon-project/lemotests" }
lemotests-macro = { git = "https://github.com/battlemon-project/lemotests" }
near-sdk = { version = "4.0.0", features = ["unstable"] }
near-contract-standards = "4.0.0"
thiserror = "1.0.31"
near-units = "0.2.0"
battlemon_models = { git = "https://github.com/battlemon-project/battlemon_models", features = ["market-contract"] }
