[package]
name = "nft_market"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
token_metadata_ext = { path = "../token_metadata_ext" }
thiserror = "1.0.31"

[dev-dependencies]
once_cell = "1.8.0"
nft_token = { path = "../nft_token" }
spoiled_nft_token = { path = "../spoiled_nft_token" }
test_helpers = { path = "../test_helpers" }
