[package]
name = "nft_market"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0", features = ["unstable"] }
near-contract-standards = "4.0.0"
token_metadata_ext = { path = "../token_metadata_ext" }
thiserror = "1.0.31"
battlemon_models = { git = "https://github.com/battlemon-project/battlemon_models", features = ["market-contract", "market-events"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros"] }
once_cell = "1.8.0"
anyhow = "1.0.57"
lemotests = { git = "https://github.com/battlemon-project/lemotests" }
lemotests-macro = { git = "https://github.com/battlemon-project/lemotests" }
