[package]
name = "nft_token"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
token_metadata_ext = { path = "../token_metadata_ext" }
nft_models = { path = "../nft_models" }
rand = "0.7.3"

[dev-dependencies]
workspaces = { git = "https://github.com/near/workspaces-rs" }
tokio = "1.17.0"
serde_json = "1.0.79"
#test_utils = { path = "../test_utils" }