[package]
name = "nft_token"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
token_metadata_ext = { path = "../token_metadata_ext" }
nft_models = { path = "../nft_models" }
rand = "0.7.3"

[dev-dependencies]
tokio = "1.19.0"
serde_json = "1.0.79"
test_helpers = { path = "../test_helpers" }
anyhow = "1.0.57"