[package]
name = "nft_token"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
thiserror = "1.0.32"
near-contract-standards = "4.0.0"
battlemon_models = { git = "https://github.com/battlemon-project/battlemon_models", features = ["nft-contract"] }

[dev-dependencies]
tokio = "1.19.0"
serde_json = "1.0.79"
lemotests = { git = "https://github.com/battlemon-project/lemotests" }
lemotests-macro = { git = "https://github.com/battlemon-project/lemotests" }
anyhow = "1.0.57"