[package]
name = "spoiled_nft_token"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
battlemon_models = { git = "https://github.com/battlemon-project/battlemon_models", features = ["nft-contract"] }
