[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
near-units = "0.2.0"
anyhow = "1.0.57"
tokio = { version = "1.19.0", features = ["macros"] }
workspaces = { git = "https://github.com/near/workspaces-rs", features = ["unstable"] }
token_metadata_ext = { path = "../token_metadata_ext" }